--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
             <form>
                 <label for="Name">Name</label>
                 <br>
-                <input type="text" id="Name" name="fname" required autocomplete autofocus>
+                <input type="text" id="Name" name="fname" required autocomplete >
                 <br>
                 <label for="Name">Email</label>
                 <br>     
-                <input type="text" id="Email" required autocomplete autofocus>
+                <input type="text" id="Email" required autocomplete>
                 <br>
                 <label for="Name">Message</label>
                 <br>
-                <input type="text" id="Message" required autocomplete autofocus>
+                <input type="text" id="Message" required autocomplete>
                 <br>
                 <button type="submit">Send Message</button>
             </form>
