--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
         <div class="header">
             <h1 id="Home">Interior Design</h1>
-            <h2 style="color: red;" id="Showcase">Showcase.</h2>
+            <h2 style="color: red;" id="showcase">Showcase.</h2>
             <div class="border"></div>
         </div>
         <div class="content">
-            <div class="gridcon" id="showcase">
+            <div class="gridcon" >
                 <div class="gallery"><img src="image/kitchenconcrete.jpg" alt="image/kitchenconcrete"></div>
                 <div class="gallery"><img src="image/atrium.jpg" alt="image/atrium"></div>
                 <div class="gallery"><img src="image/livingroom.jpg" alt="image/kitchenconcrete"></div>
